--- a/BS.html
+++ b/BS.html
@@ -10,38 +10,57 @@
             href="Ich.jpg">
 <meta name="description" content="Website über Benjamin Schröter">
 <meta name="keywords" content="Ben Schröter">
+
+    <link rel="stylesheet" href="StyleHome.css">
+
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="BS.html">Ben's Home</a>
-            <a href="CVBS.html">Ben's Lebenslauf</a>
-            <a href="DSMC.html">Disomaco</a>
+            <a class="nav-item" href="BS.html">Ben's Home</a>
+            <a class="nav-item" href="CVBS.html">Ben's Lebenslauf</a>
+            <a class="nav-item" href="DSMC.html">Disomaco</a>
+            <a class="nav-item" href="DSMC.html">Ben Unleashed</a>
         </nav>
     </header>
 
     <main>
         <h1>Willkommen auf meiner Website!</h1>
         <article>
-            <section>
-                Schön, dass Du hierher gefunden hast! Mein Name ist Benjamin Schröter. Ich beschreibe mich gerne als Allrounder.
+            <section class="Absatz">
+                <p>
+                    Schön, dass Du hierher gefunden hast! Mein Name ist <span class="wichtig">Benjamin Schröter </span>. Ich beschreibe mich gerne als Allrounder.
                 Ich kenne mich besonders mit den Themen Finanzcontrolling, Social Media Marketing und Contenterstellung aus.
                 Auf dieser Webseite stelle ich mich näher vor.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ullam dignissimos numquam eos harum ipsum nulla. Culpa dignissimos voluptatibus quam provident, placeat hic, tempore corporis illum ad deleniti error labore?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ex adipisci, rerum ad voluptates tempora hic deserunt reiciendis exercitationem quisquam inventore minus accusamus deleniti aperiam asperiores fugiat? Veniam, necessitatibus corporis!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe illum a aliquid iste itaque ex, facere eum similique quidem doloribus fugit porro consectetur assumenda voluptates quia provident eaque repudiandae labore.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ullam dignissimos numquam eos harum ipsum nulla. Culpa dignissimos voluptatibus quam provident, placeat hic, tempore corporis illum ad deleniti error labore?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ullam dignissimos numquam eos harum ipsum nulla. Culpa dignissimos voluptatibus quam provident, placeat hic, tempore corporis illum ad deleniti error labore?
+                </p>    
             </section>
 
         </article>
         <article>
             <h2>Worüber möchtest du mehr erfahren?</h2>
             <a href ="CVBS.html">
-                <img 
+                <img class="Nav-Pics"
                     src="Mein Lebenslauf.png"
                     alt="Ben's Lebenslauf">
+                </img>    
             </a>
             <a href ="DSMC.html">
-                <img 
+                <img class="Nav-Pics"
                     src="DSMC.png"
                     alt="Disomaco">
+                </img> 
             </a>
         </article>
 
@@ -52,10 +71,11 @@
 
 <Footer>
 Diese Website wurde erstellt von Benjamin Schröter.
-<ul>
+<ul class="Footer-Nav">
     <li> <a href="BS.html">Ben's Home</a> </li>
     <li> <a href="CVBS.html">Ben's Lebenslauf</a> </li>
     <li> <a href="DSMC.html">Disomaco</a> </li>
+    <li> <a href="BenUnleashed.html">Ben Unleashed</a> </li>
     <li> <a href="Impressum.html">Impressum</a> </li>
 </ul>
 
