--- a/CVBS.html
+++ b/CVBS.html
@@ -9,9 +9,42 @@
             <a href="BS.html">Ben's Home</a>
             <a href="CVBS.html">Ben's Lebenslauf</a>
             <a href="DSMC.html">Disomaco</a>
+            <a href="BenUnleashed.html">Ben Unleashed</a>
         </nav>
     </header>
-    <h1>BENJAMIN SCHRÖTER</h1>
+
+    <Article>
+        <Section>
+            <img    height="200px"
+                    src="Ich.jpg"
+                    alt="Foto von Benjamin Schröter">
+            </img>        
+
+        </Section>
+        <section>
+            <h1>BENJAMIN SCHRÖTER</h1>
+            <p>
+                Ich bin Business Controller mit einem Hintergrund im Digitalen Marketing. Mit meinen exzellenten analytischen & kreativen Fähigkeiten führe ich Projekte und Teams zum Erfolg. Ich weiß komplexe Sachverhalte verständlich darzustellen und die Ergebnisse prägnant zu präsentieren.
+            </p>
+        </section>
+
+        
+    </Article>
+
+
 </body>
+
+<Footer>
+    Diese Website wurde erstellt von Benjamin Schröter.
+    <ul>
+        <li> <a href="BS.html">Ben's Home</a> </li>
+        <li> <a href="CVBS.html">Ben's Lebenslauf</a> </li>
+        <li> <a href="DSMC.html">Disomaco</a> </li>
+        <li> <a href="BenUnleashed.html">Ben Unleashed</a> </li>
+        <li> <a href="Impressum.html">Impressum</a> </li>
+    </ul>
+    
+    </Footer>
+
 
 </html>
