--- a/DSMC.html
+++ b/DSMC.html
@@ -2,7 +2,7 @@
 
 <head>
 <title>DSMC</title>
-
+<link rel="stylesheet" href="StyleDSMC.css">
 </head>
 
 <body>
@@ -11,10 +11,40 @@
             <a href="BS.html">Ben's Home</a>
             <a href="CVBS.html">Ben's Lebenslauf</a>
             <a href="DSMC.html">Disomaco</a>
+            <a href="BenUnleashed.html">Ben Unleashed</a>
         </nav>
     </header>
     <h1>Benjamin Schröter - Digital Social Marketing Consultant</h1>
+    
+    <main>
+    <section>
+        <h2>Worüber möchtest du mehr erfahren?</h2>
+        <a href ="CVBS.html">
+            <img class="Nav-Pics"
+                src="Mein Lebenslauf.png"
+                alt="Ben's Lebenslauf">
+            </img>    
+        </a>
+        <a href ="DSMC.html">
+            <img class="Nav-Pics"
+                src="DSMC.png"
+                alt="Disomaco">
+            </img> 
+        </a>
+    </sections>
+    </main>
 </body>
 
+<Footer>
+    Diese Website wurde erstellt von Benjamin Schröter.
+    <ul>
+        <li> <a href="BS.html">Ben's Home</a> </li>
+        <li> <a href="CVBS.html">Ben's Lebenslauf</a> </li>
+        <li> <a href="DSMC.html">Disomaco</a> </li>
+        <li> <a href="BenUnleashed.html">Ben Unleashed</a> </li>
+        <li> <a href="Impressum.html">Impressum</a> </li>
+    </ul>
+    
+    </Footer>
 
 </html>
